crux-mir/test/symb_eval/num/checked_add.good
test checked_add/ec6fd7f2::crux_test[0]: returned 44, FAILED

failures:

---- checked_add/ec6fd7f2::crux_test[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/num/checked_add.rs:6:5: 6:12: error: in checked_add/ec6fd7f2::crux_test[0]
[Crux]   attempt to compute `const 100_u8 + move _2`, which would overflow

[Crux] Overall status: Invalid.
